--- a/index.html
+++ b/index.html
@@ -1017,6 +1017,404 @@
         }
 
     </style>
+
+    <style>
+    /* Modern Variables */
+    :root {
+        /* Colors */
+        --primary-100: #dbeafe;
+        --primary-200: #bfdbfe;
+        --primary-300: #93c5fd;
+        --primary-400: #60a5fa;
+        --primary-500: #3b82f6;
+        --primary-600: #2563eb;
+        --primary-700: #1d4ed8;
+        
+        /* Neutral Colors */
+        --neutral-50: #f8fafc;
+        --neutral-100: #f1f5f9;
+        --neutral-200: #e2e8f0;
+        --neutral-300: #cbd5e1;
+        --neutral-400: #94a3b8;
+        --neutral-500: #64748b;
+        --neutral-600: #475569;
+        --neutral-700: #334155;
+        --neutral-800: #1e293b;
+        --neutral-900: #0f172a;
+
+        /* Spacing */
+        --space-xs: 0.25rem;
+        --space-sm: 0.5rem;
+        --space-md: 1rem;
+        --space-lg: 1.5rem;
+        --space-xl: 2rem;
+        --space-2xl: 3rem;
+
+        /* Typography */
+        --font-sans: 'Inter', system-ui, sans-serif;
+        --font-mono: 'JetBrains Mono', monospace;
+        
+        /* Border Radius */
+        --radius-sm: 0.25rem;
+        --radius-md: 0.5rem;
+        --radius-lg: 1rem;
+        --radius-full: 9999px;
+
+        /* Transitions */
+        --transition-fast: 150ms;
+        --transition-normal: 250ms;
+        --transition-slow: 350ms;
+
+        /* Shadows */
+        --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+        --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1);
+        --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1);
+
+        /* Z-index */
+        --z-nav: 100;
+        --z-modal: 200;
+        --z-toast: 300;
+    }
+
+    /* Dark Mode Colors */
+    [data-theme="dark"] {
+        --neutral-50: #0f172a;
+        --neutral-100: #1e293b;
+        --neutral-200: #334155;
+        --neutral-300: #475569;
+        --neutral-400: #64748b;
+        --neutral-500: #94a3b8;
+        --neutral-600: #cbd5e1;
+        --neutral-700: #e2e8f0;
+        --neutral-800: #f1f5f9;
+        --neutral-900: #f8fafc;
+    }
+
+    /* Enhanced Base Styles */
+    body {
+        font-family: var(--font-sans);
+        color: var(--neutral-800);
+        background: var(--neutral-50);
+        line-height: 1.65;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+
+    /* Modern Navigation */
+    .nav-container {
+        position: fixed;
+        top: var(--space-md);
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: var(--z-nav);
+        width: 90%;
+        max-width: 600px;
+        opacity: 0;
+        transition: opacity var(--transition-normal), transform var(--transition-normal);
+    }
+
+    .nav-container.visible {
+        opacity: 1;
+    }
+
+    .nav-glass {
+        background: rgba(255, 255, 255, 0.8);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: var(--radius-full);
+        padding: var(--space-sm) var(--space-md);
+        display: flex;
+        gap: var(--space-lg);
+        justify-content: center;
+        box-shadow: var(--shadow-lg);
+    }
+
+    .nav-link {
+        color: var(--neutral-600);
+        text-decoration: none;
+        font-weight: 500;
+        padding: var(--space-xs) var(--space-sm);
+        border-radius: var(--radius-full);
+        transition: all var(--transition-fast);
+        position: relative;
+    }
+
+    .nav-link:hover {
+        color: var(--primary-600);
+    }
+
+    .nav-link::after {
+        content: '';
+        position: absolute;
+        bottom: -2px;
+        left: 50%;
+        width: 0;
+        height: 2px;
+        background: var(--primary-600);
+        transition: all var(--transition-normal);
+        transform: translateX(-50%);
+    }
+
+    .nav-link:hover::after {
+        width: 100%;
+    }
+
+    /* Enhanced Section Styles */
+    .section {
+        opacity: 0;
+        transform: translateY(20px);
+        transition: opacity var(--transition-slow), transform var(--transition-slow);
+        padding: var(--space-xl);
+        margin-bottom: var(--space-2xl);
+        border-radius: var(--radius-lg);
+        background: white;
+        box-shadow: var(--shadow-lg);
+    }
+
+    .section.visible {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    /* Modern Card Design */
+    .card {
+        background: white;
+        border-radius: var(--radius-lg);
+        padding: var(--space-lg);
+        transition: transform var(--transition-normal), box-shadow var(--transition-normal);
+        border: 1px solid var(--neutral-200);
+    }
+
+    .card:hover {
+        transform: translateY(-5px);
+        box-shadow: var(--shadow-lg);
+    }
+
+    /* Enhanced Project Cards */
+    .project-card {
+        position: relative;
+        overflow: hidden;
+        border-radius: var(--radius-lg);
+        background: white;
+        transition: all var(--transition-normal);
+    }
+
+    .project-card::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(45deg, var(--primary-500), var(--primary-700));
+        opacity: 0;
+        transition: opacity var(--transition-normal);
+    }
+
+    .project-card:hover::before {
+        opacity: 0.1;
+    }
+
+    .project-card:hover {
+        transform: translateY(-8px) rotate(1deg);
+        box-shadow: var(--shadow-lg);
+    }
+
+    /* Modern Form Styles */
+    .form-group {
+        position: relative;
+        margin-bottom: var(--space-lg);
+    }
+
+    .form-control {
+        width: 100%;
+        padding: var(--space-md);
+        border: 2px solid var(--neutral-200);
+        border-radius: var(--radius-md);
+        transition: all var(--transition-fast);
+        background: var(--neutral-50);
+    }
+
+    .form-control:focus {
+        outline: none;
+        border-color: var(--primary-500);
+        box-shadow: 0 0 0 3px var(--primary-100);
+    }
+
+    .form-label {
+        position: absolute;
+        left: var(--space-md);
+        top: 50%;
+        transform: translateY(-50%);
+        transition: all var(--transition-fast);
+        pointer-events: none;
+        color: var(--neutral-500);
+    }
+
+    .form-control:focus ~ .form-label,
+    .form-control:not(:placeholder-shown) ~ .form-label {
+        transform: translateY(-170%) scale(0.8);
+        color: var(--primary-600);
+    }
+
+    /* Modern Button Styles */
+    .btn {
+        padding: var(--space-sm) var(--space-lg);
+        border-radius: var(--radius-full);
+        font-weight: 500;
+        transition: all var(--transition-fast);
+        position: relative;
+        overflow: hidden;
+        border: none;
+        cursor: pointer;
+    }
+
+    .btn-primary {
+        background: linear-gradient(45deg, var(--primary-600), var(--primary-700));
+        color: white;
+    }
+
+    .btn-primary:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 10px 20px -10px var(--primary-600);
+    }
+
+    .btn::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 200%;
+        height: 200%;
+        background: radial-gradient(circle, rgba(255,255,255,0.3) 0%, transparent 50%);
+        transform: translate(-50%, -50%) scale(0);
+        transition: transform var(--transition-fast);
+    }
+
+    .btn:active::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    /* Modern Loading Animation */
+    .loader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        z-index: var(--z-modal);
+    }
+
+    .loader-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: var(--space-md);
+    }
+
+    .loader-spinner {
+        width: 40px;
+        height: 40px;
+        border: 3px solid var(--neutral-200);
+        border-top-color: var(--primary-600);
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+    }
+
+    /* Toast Notifications */
+    .toast-container {
+        position: fixed;
+        bottom: var(--space-lg);
+        right: var(--space-lg);
+        z-index: var(--z-toast);
+        display: flex;
+        flex-direction: column;
+        gap: var(--space-sm);
+    }
+
+    .toast {
+        padding: var(--space-md) var(--space-lg);
+        border-radius: var(--radius-md);
+        background: white;
+        box-shadow: var(--shadow-lg);
+        transform: translateX(120%);
+        animation: slideIn var(--transition-normal) forwards;
+    }
+
+    .toast.success {
+        border-left: 4px solid #10b981;
+    }
+
+    .toast.error {
+        border-left: 4px solid #ef4444;
+    }
+
+    /* Enhanced Animations */
+    @keyframes spin {
+        to { transform: rotate(360deg); }
+    }
+
+    @keyframes slideIn {
+        to { transform: translateX(0); }
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+        .nav-container {
+            width: 95%;
+        }
+
+        .nav-glass {
+            padding: var(--space-xs) var(--space-sm);
+        }
+
+        .section {
+            padding: var(--space-lg);
+            margin-bottom: var(--space-xl);
+        }
+
+        .project-card {
+            margin-bottom: var(--space-lg);
+        }
+    }
+
+    @media (max-width: 480px) {
+        .nav-link {
+            font-size: 0.875rem;
+            padding: var(--space-xs);
+        }
+
+        .btn {
+            width: 100%;
+            margin-bottom: var(--space-sm);
+        }
+    }
+
+    /* Print Styles */
+    @media print {
+        .nav-container,
+        .btn,
+        .toast-container {
+            display: none !important;
+        }
+
+        .section {
+            break-inside: avoid;
+            page-break-inside: avoid;
+        }
+    }
+    </style>
 </head>
 <body>
     <!-- Dark mode toggle -->
