--- a/index.html
+++ b/index.html
@@ -78,9 +78,6 @@
             transition: transform 0.3s ease;
             z-index: 1000;
             box-shadow: var(--shadow);
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
         }
         .sidebar.hidden {
             transform: translateX(-100%);
@@ -88,7 +85,6 @@
         .sidebar ul {
             list-style: none;
             padding: 15px 0;
-            flex-grow: 1;
         }
         .sidebar ul li {
             padding: 15px 20px;
@@ -105,15 +101,6 @@
             width: 20px;
             text-align: center;
         }
-        .sidebar ul li#auth-btn {
-            background: rgba(255, 255, 255, 0.1);
-            border-top: 1px solid rgba(255, 255, 255, 0.2);
-            margin-top: auto;
-            padding: 20px;
-        }
-        .sidebar ul li#auth-btn:hover {
-            background: rgba(255, 255, 255, 0.2);
-        }
         .main-content {
             width: 100%;
             height: calc(100vh - 80px);
@@ -125,7 +112,7 @@
             height: 100vh;
             padding: 40px 15px;
             text-align: center;
-            display: none;
+            display: none; /* Hidden by default */
             opacity: 0;
             transform: translateY(20px);
             transition: opacity 0.5s ease, transform 0.5s ease;
@@ -330,26 +317,8 @@
         .back-to-top.visible {
             display: block;
         }
-        #auth-section {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1200;
-        }
-        #auth-section .card {
-            max-width: 400px;
-            width: 90%;
-            padding: 30px;
-        }
-        #auth-section .btn {
-            margin: 10px 10px 0 0;
-        }
+
+        /* Responsive Design */
         @media (min-width: 768px) {
             .container {
                 flex-direction: row;
@@ -421,7 +390,6 @@
     <div id="auth-section" class="hidden">
         <div class="card">
             <h2>Admin Authentication</h2>
-            <p>Please login to access editing features.</p>
             <div class="form-group">
                 <label>Email</label>
                 <input type="email" id="email" placeholder="Enter your email" required>
@@ -430,8 +398,8 @@
                 <label>Password</label>
                 <input type="password" id="password" placeholder="Enter your password" required>
             </div>
-            <button onclick="login()" class="btn">Login</button>
             <button onclick="signup()" class="btn">Sign Up</button>
+            <button onclick="login()" class="btn">Login</button>
         </div>
     </div>
 
@@ -447,9 +415,9 @@
                 <li onclick="showSection('projects')"><i class="fas fa-project-diagram"></i><span>Projects</span></li>
                 <li onclick="showSection('certifications')"><i class="fas fa-certificate"></i><span>Certifications</span></li>
                 <li onclick="showSection('contact')"><i class="fas fa-envelope"></i><span>Contact</span></li>
-                <li onclick="toggleTheme()" id="theme-btn"><i class="fas fa-moon"></i><span>Dark Mode</span></li>
-                <li onclick="toggleSidebar()" id="toggle-btn"><i class="fas fa-bars"></i><span>Toggle Sidebar</span></li>
                 <li onclick="toggleAdmin()" id="auth-btn"><i class="fas fa-lock"></i><span>Admin</span></li>
+                <li onclick="toggleTheme()" id="theme-btn"><i class="fas fa-moon"></i><span>Dark Mode</span></li>
+                <li onclick="toggleSidebar()" id="toggle-btn"><i class="fas fa-bars"></i><span>Toggle</span></li>
             </ul>
         </div>
 
@@ -638,7 +606,7 @@
     <script>
         // State Management
         let admin = false;
-        let sidebarOpen = window.innerWidth >= 768;
+        let sidebarOpen = false;
         let cropper;
         const data = {
             skills: safeParse(localStorage.getItem('skills')) || [
@@ -674,6 +642,7 @@
             messages: safeParse(localStorage.getItem('messages')) || []
         };
 
+        // Utility to safely parse JSON
         function safeParse(json) {
             try {
                 return JSON.parse(json);
@@ -683,6 +652,7 @@
             }
         }
 
+        // Initialization
         document.addEventListener('DOMContentLoaded', () => {
             loadAdminState();
             renderSkills();
@@ -691,11 +661,11 @@
             setupContactForm();
             loadTheme();
             updateSidebarState();
-            showSection('about');
+            showSection('about'); // Show "About" section by default
             window.addEventListener('resize', debounce(updateSidebarState, 200));
-            setupBackToTop();
         });
 
+        // Authentication
         function signup() {
             const email = document.getElementById('email').value.trim();
             const password = document.getElementById('password').value.trim();
@@ -758,6 +728,7 @@
             if (admin) renderMessages();
         }
 
+        // Sidebar
         function toggleSidebar() {
             sidebarOpen = !sidebarOpen;
             updateSidebarState();
@@ -767,24 +738,15 @@
             const sidebar = document.getElementById('sidebar');
             const mainContent = document.getElementById('main-content');
             if (window.innerWidth >= 768) {
-                if (sidebarOpen) {
-                    sidebar.classList.remove('hidden');
-                    mainContent.classList.remove('expanded');
-                    mainContent.style.marginLeft = '250px';
-                    mainContent.style.width = 'calc(100% - 250px)';
-                } else {
-                    sidebar.classList.add('hidden');
-                    mainContent.classList.add('expanded');
-                    mainContent.style.marginLeft = '60px';
-                    mainContent.style.width = 'calc(100% - 60px)';
-                }
+                sidebar.classList.remove('hidden');
+                mainContent.classList.toggle('expanded', !sidebarOpen);
             } else {
                 sidebar.classList.toggle('hidden', !sidebarOpen);
-                mainContent.style.marginLeft = '0';
-                mainContent.style.width = '100%';
+                mainContent.classList.remove('expanded');
             }
         }
 
+        // Theme Toggle
         function toggleTheme() {
             const body = document.body;
             const currentTheme = body.getAttribute('data-theme');
@@ -803,6 +765,7 @@
                 : `<i class="fas fa-moon"></i><span>Dark Mode</span>`;
         }
 
+        // Section Navigation
         function showSection(sectionId) {
             const sections = document.querySelectorAll('section');
             sections.forEach(section => {
@@ -811,9 +774,9 @@
             const targetSection = document.getElementById(sectionId);
             if (targetSection) {
                 targetSection.classList.add('active');
-                targetSection.scrollTop = 0;
+                targetSection.scrollTop = 0; // Reset scroll position
             }
-            if (window.innerWidth < 768 && sidebarOpen) {
+            if (window.innerWidth < 768) {
                 sidebarOpen = false;
                 updateSidebarState();
             }
@@ -826,6 +789,7 @@
             }
         }
 
+        // Debounce Utility
         function debounce(func, wait) {
             let timeout;
             return function (...args) {
@@ -834,6 +798,7 @@
             };
         }
 
+        // Back to Top
         function setupBackToTop() {
             const btn = document.getElementById('back-to-top');
             document.querySelector('.main-content').addEventListener('scroll', debounce(() => {
@@ -841,6 +806,7 @@
             }, 100));
         }
 
+        // About Section
         function renderAbout() {
             const { title, desc, video, profilePic } = data.about;
             document.getElementById('about-title').textContent = title || 'About Me';
@@ -894,6 +860,7 @@
             }
         }
 
+        // Profile Picture Cropping
         function startCrop() {
             const file = document.getElementById('profile-upload').files[0];
             if (file && file.type.includes('image')) {
@@ -935,6 +902,7 @@
             document.getElementById('profile-upload').value = '';
         }
 
+        // Skills Section
         function renderSkills() {
             const grid = document.getElementById('skills-grid');
             grid.innerHTML = '';
@@ -975,6 +943,7 @@
             renderSkills();
         }
 
+        // Projects Section
         function renderProjects() {
             const grid = document.getElementById('project-grid');
             grid.innerHTML = '';
@@ -1058,6 +1027,7 @@
             document.getElementById('media-preview').innerHTML = '';
         }
 
+        // Contact Section
         function setupContactForm() {
             const form = document.getElementById('contact-form');
             form.addEventListener('submit', (e) => {
@@ -1100,7 +1070,11 @@
             localStorage.setItem('messages', JSON.stringify(data.messages));
             renderMessages();
         }
+
+        // Setup Back to Top after DOM is loaded
+        document.addEventListener('DOMContentLoaded', setupBackToTop);
     </script>
+    <!-- Include Cropper.js for image cropping -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
 </body>
